# Stack.Python

./: .gitignore  CONTRIBUTING.md  CURRICULUM.md  LICENSE  Motivation.md  README.md  SETUP.md  project-spec.md  pyproject.toml  requirements.txt
.github/workflows/: link-check.yml  notebook-check.yml
modules/module-000-introduction-to-python/: README.md  exercises.md  notebook.ipynb  quiz.md  solutions.md
modules/module-001-setting-up-your-environment/: README.md  exercises.md  notebook.ipynb  quiz.md  solutions.md
modules/module-002-your-first-python-program/: README.md  exercises.md  notebook.ipynb  quiz.md  solutions.md
modules/module-003-variables-and-data-types/: README.md  exercises.md  notebook.ipynb  quiz.md  solutions.md
modules/module-004-type-conversion-and-casting/: README.md  exercises.md  notebook.ipynb  quiz.md  solutions.md
modules/module-005-basic-input-and-output/: README.md  exercises.md  notebook.ipynb  quiz.md  solutions.md
modules/module-006-operators/: README.md  exercises.md  notebook.ipynb  quiz.md  solutions.md
modules/module-007-strings-deep-dive/: README.md  exercises.md  notebook.ipynb  quiz.md  solutions.md
modules/module-008-string-formatting/: README.md  exercises.md  notebook.ipynb  quiz.md  solutions.md
modules/module-009-numbers-deep-dive/: README.md  exercises.md  notebook.ipynb  quiz.md  solutions.md
modules/module-010-mini-project-calculator/: README.md  exercises.md  notebook.ipynb  quiz.md  solutions.py
modules/module-014-while-loops/: README.md  (+4 more)
scripts/: check_progress.py  new_module.py  run_all_notebooks.py
(+507 files in other folders)
