[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "stack-python"
version = "0.1.0"
description = "A 0–100 linear Python learning sandbox for absolute beginners"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
